--- a/Index.html
+++ b/Index.html
@@ -128,11 +128,11 @@
             <p>At Deleum, we refer to AI tools as "generative AI" applications. These are tools that can create new content, such as text, images, or even code, based on your input. Think of them as intelligent assistants that can help you with a wide range of tasks. </p>
             <p>Some examples of AI tools you might encounter or use for work-related purposes include:</p>
             <ul>
-                <li>**OpenAI's ChatGPT:** A widely used AI that can generate human-like text, answer questions, and assist with writing tasks. </li>
-                <li>**Google's Gemini:** Another powerful AI from Google that can understand and generate various forms of content, similar to ChatGPT. </li>
-                <li>**Microsoft Copilot:** An AI assistant integrated into Microsoft 365 applications (like Word, Excel, PowerPoint, Outlook, and Teams) to help with tasks such as drafting emails, summarizing documents, and creating presentations.</li>
+                <li><strong>OpenAI's ChatGPT</strong>: A widely used AI that can generate human-like text, answer questions, and assist with writing tasks. </li>
+                <li><strong>Google's Gemini:</strong> Another powerful AI from Google that can understand and generate various forms of content, similar to ChatGPT. </li>
+                <li><strong>Microsoft Copilot:</strong> An AI assistant integrated into Microsoft 365 applications (like Word, Excel, PowerPoint, Outlook, and Teams) to help with tasks such as drafting emails, summarizing documents, and creating presentations.</li>
             </ul>
-
+            <p>Please check with ICT if you require other AI tools, do not download and install without getting clearance from them.</p>
             <h3>Why do we have an AI Usage Policy?</h3>
             <p>Our goal is to empower you with these tools while ensuring we protect our company's valuable information. This policy provides guidance on the responsible and secure use of AI tools within Deleum, specifically to mitigate the risk of exposing sensitive information. </p>
         </div>
