--- a/Index.html
+++ b/Index.html
@@ -138,7 +138,7 @@
         </div>
 
         <div class="pagination">
-            <a href="index.html">Back to Home</a>
+            <a href="Index.html">Back to Home</a>
             <a href="chapter1.html">Next Chapter</a>
         </div>
     </div>
